
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int abort () ;
 char* calloc (int,int) ;
 int memcpy (char*,char*,int) ;
 int perror (char*) ;
 int strlen (char*) ;

__attribute__((used)) static void
xstrdup(char * in, char ** outp)
{
 char * out;
 int sz;

 sz = strlen(in) + 1;

 out = calloc(1, sz);
 if(!out)
 {
  perror("calloc");
  abort();
 }

 memcpy(out, in, sz);
 *outp = out;
}
